Source/WebKit2/NetworkProcess/capture/NetworkCaptureManager.cpp
@@ -62,16 +62,19 @@ Manager& Manager::singleton()
 
 void Manager::initialize(const String& recordReplayMode, const String& recordReplayCacheLocation)
 {
-    DEBUG_LOG("Initializing");
-
-    if (equalIgnoringASCIICase(recordReplayMode, "record"))
+    if (equalIgnoringASCIICase(recordReplayMode, "record")) {
+        DEBUG_LOG("Initializing: recording mode");
         m_recordReplayMode = Record;
-    else if (equalIgnoringASCIICase(recordReplayMode, "replay"))
+    } else if (equalIgnoringASCIICase(recordReplayMode, "replay")) {
+        DEBUG_LOG("Initializing: replay mode");
         m_recordReplayMode = Replay;
-    else
+    } else {
+        DEBUG_LOG("Initializing: disabled");
         m_recordReplayMode = Disabled;
+    }
 
     m_recordReplayCacheLocation = WebCore::pathByAppendingComponent(recordReplayCacheLocation, kDirNameRecordReplay);
+    DEBUG_LOG("Cache location = " STRING_SPECIFIER, DEBUG_STR(m_recordReplayCacheLocation));
 
     if (isRecording()) {
         m_recordFileHandle = WebCore::FileHandle(reportRecordPath(), WebCore::OpenForWrite);
@@ -79,12 +82,8 @@ void Manager::initialize(const String& recordReplayMode, const String& recordRep
         m_recordFileHandle = WebCore::FileHandle(reportRecordPath(), WebCore::OpenForRead);
         m_loadFileHandle = WebCore::FileHandle(reportLoadPath(), WebCore::OpenForWrite);
         m_replayFileHandle = WebCore::FileHandle(reportReplayPath(), WebCore::OpenForWrite);
-    }
-
-    DEBUG_LOG("Cache location = " STRING_SPECIFIER, DEBUG_STR(m_recordReplayCacheLocation));
-
-    if (isReplaying())
         loadResources();
+    }
 }
 
 void Manager::terminate()
@@ -134,17 +133,17 @@ Resource* Manager::findExactMatch(const WebCore::ResourceRequest& request)
 Resource* Manager::findBestFuzzyMatch(const WebCore::ResourceRequest& request)
 {
     const auto& url = request.url();
+    const auto& urlIdentifyingCommonDomain = Manager::urlIdentifyingCommonDomain(url);
+
+    const auto& lower = std::lower_bound(std::begin(m_cachedResources), std::end(m_cachedResources), urlIdentifyingCommonDomain, [](auto& resource, const auto& urlIdentifyingCommonDomain) {
+        return WTF::codePointCompareLessThan(resource.urlIdentifyingCommonDomain(), urlIdentifyingCommonDomain);
+    });
+    const auto& upper = std::upper_bound(lower, std::end(m_cachedResources), urlIdentifyingCommonDomain, [](const auto& urlIdentifyingCommonDomain, auto& resource) {
+        return WTF::codePointCompareLessThan(urlIdentifyingCommonDomain, resource.urlIdentifyingCommonDomain());
+    });
+
     Resource* bestMatch = nullptr;
     int bestScore = kMinMatch;
-    const auto& baseURL = url.string().left(url.pathStart());
-
-    const auto& lower = std::lower_bound(std::begin(m_cachedResources), std::end(m_cachedResources), baseURL, [](auto& resource, const auto& url) {
-        return WTF::codePointCompareLessThan(resource.baseURL().string(), url);
-    });
-    const auto& upper = std::upper_bound(lower, std::end(m_cachedResources), baseURL, [](const auto& url, auto& resource) {
-        return WTF::codePointCompareLessThan(resource.baseURL().string(), url);
-    });
-
     const auto& requestParameters = WebCore::URLParser::parseURLEncodedForm(url.query());
     for (auto iResource = lower; iResource != upper; ++iResource) {
         int thisScore = fuzzyMatchURLs(url, requestParameters, iResource->url(), iResource->queryParameters());
@@ -417,6 +416,11 @@ String Manager::hashToPath(const String& hash)
     path = WebCore::pathByAppendingComponent(path, fileName.toString());
 
     return path;
+}
+
+String Manager::urlIdentifyingCommonDomain(const WebCore::URL& url)
+{
+    return url.protocolHostAndPort();
 }
 
 void Manager::logRecordedResource(const WebCore::ResourceRequest& request)
